product page corrected

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,5 +1,6 @@
 :root {
     --dark: #3A3E41;
+    --dark-85: #3a3e41D9;
     --dark-70: #3a3e41B3;
     --dark-40: #3a3e4166;
     --dark-0: #3a3e4100;
