formsubmit.co added to contact form

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -421,6 +421,10 @@ nav {
 	scroll-margin-top: 190px;
 }
 
+.honey {
+	display: none;
+}
+
 .contact__wrapper {
 	position: relative;
 	display: flex;
