--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -311,7 +311,8 @@ nav {
 			flex-grow: 1;
 		}
 
-		&-header--left, &-header--right {
+		&-header--left,
+		&-header--right {
 			width: 100%;
 			height: 100vh;
 			min-height: 500px;
@@ -400,17 +401,17 @@ nav {
 	}
 }
 
-[data-choice='nnpb'][data-img-choice="1"] > div.product-img__img {
+[data-choice='nnpb'][data-img-choice='1'] > div.product-img__img {
 	background-image: url('../img/NNPB - TECHGAFIL.webp');
 }
-[data-choice='nnpb'][data-img-choice="2"] > div.product-img__img {
+[data-choice='nnpb'][data-img-choice='2'] > div.product-img__img {
 	background-image: url('../img/PB - TECHGAFIL.webp');
 }
 
-[data-choice='pb'][data-img-choice="1"] > div.product-img__img {
+[data-choice='pb'][data-img-choice='1'] > div.product-img__img {
 	background-image: url('../img/PB - TECHGAFIL.webp');
 }
-[data-choice='pb'][data-img-choice="2"] > div.product-img__img {
+[data-choice='pb'][data-img-choice='2'] > div.product-img__img {
 	background-image: url('../img/NNPB - TECHGAFIL.webp');
 }
 
@@ -506,6 +507,23 @@ nav {
 			border-radius: 100px;
 		}
 	}
+}
+
+///////////////
+// THANK YOU //
+///////////////
+
+.main__text--thank-you {
+	position: absolute;
+	color: #000;
+	top: 50%;left: 50%;
+	padding: 2em;
+	border-radius: 10px;
+	box-shadow: 0 0 10px var(--dark-40);
+	font-size: 2rem;
+	text-align: center;
+	transform: translate(-50%, -50%); 
+	background-color: #fff;
 }
 
 ////////////
