--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -516,13 +516,14 @@ nav {
 .main__text--thank-you {
 	position: absolute;
 	color: #000;
-	top: 50%;left: 50%;
+	top: 50%;
+	left: 50%;
 	padding: 2em;
 	border-radius: 10px;
 	box-shadow: 0 0 10px var(--dark-40);
 	font-size: 2rem;
 	text-align: center;
-	transform: translate(-50%, -50%); 
+	transform: translate(-50%, -50%);
 	background-color: #fff;
 }
 
@@ -575,6 +576,117 @@ footer {
 		}
 	}
 }
+
+/////////////
+// COOKIES //
+/////////////
+
+.cookie::before {
+	content: '🍪';
+	font-size: 10rem;
+	position: absolute;
+	top: -8rem;
+	left: 2rem;
+}
+
+.cookie {
+	position: fixed;
+	display: flex;
+	bottom: 0;
+	left: 50%;
+	width: 50%;
+	height: 10%;
+	border-radius: 5px 5px 0 0;
+	box-shadow: 0 0 10px var(--dark-70);
+	transform: translate(-50%, 100%);
+	background-color: #fff;
+	justify-content: center;
+	align-items: center;
+	opacity: 0;
+	animation: show-cookies 1s 1s forwards;
+
+	&--text {
+		color: #000;
+		text-align: center;
+		font-size: 2rem;
+		margin: 3em;
+	}
+
+	&--btn {
+		padding: 1em 2em;
+		font-size: 2rem;
+		color: #fff;
+		border-radius: 200px;
+		background-color: var(--dark);
+	}
+}
+
+.hide {
+	display: none;
+}
+
+@keyframes show-cookies {
+	100% {
+		opacity: 1;
+		transform: translate(-50%, 0);
+	}
+}
+
+// .cookie::after {
+// 	content: '';
+// 	position: fixed;
+// 	width: 300px;
+// 	height: 300px;
+// 	background-repeat: no-repeat;
+// 	background-image: url(pngwing.com.png);
+// 	background-size: cover;
+// 	bottom: 0;
+// 	right: 0;
+// 	transform: translate(-50%,-50%);
+
+// }
+
+// .cookie {
+// 	position: fixed;
+// 	display: flex;
+// 	justify-content: center;
+// 	align-items: center;
+// 	flex-direction: column;
+// 	bottom: 0;
+// 	width: 100%;
+// 	height: 20%;
+// 	background-color: #fff;
+// 	opacity: 0;
+// 	transform: translateY(200%);
+// 	animation: show-cookies 0.8s 0.8s forwards;
+// }
+
+// .cookie--text {
+// 	margin: 1em;
+// 	font-size: 20px;
+// }
+
+// .cookie--btn {
+// 	margin: 1em;
+// 	padding: 1em 2em;
+// 	font-size: 18px;
+// 	color: rgb(255, 255, 255);
+// 	background-color: rgb(72, 110, 214);
+// 	cursor: pointer;
+// 	border-radius: 10px;
+// 	border: none;
+// }
+
+// .hide {
+// 	display: none;
+// }
+
+// @keyframes show-cookies {
+// 	100% {
+// 		opacity: 1;
+// 		transform: translateY(0);
+// 	}
+// }
 
 ///////////
 // MEDIA //
