--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -515,13 +515,16 @@ nav {
 	color: #000;
 	top: 50%;
 	left: 50%;
-	padding: 2em;
 	border-radius: 10px;
 	box-shadow: 0 0 10px var(--dark-40);
 	font-size: 2rem;
 	text-align: center;
 	transform: translate(-50%, -50%);
 	background-color: #fff;
+
+	p {
+		padding: 2em;
+	}
 }
 
 ////////////
