--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -123,6 +123,7 @@ nav {
 		}
 
 		.menu__mobile-languages {
+			visibility: hidden;
 			display: flex;
 			flex-direction: column;
 
@@ -161,6 +162,7 @@ nav {
 		}
 
 		.menu__languages {
+			visibility: hidden;
 			display: none;
 
 			a {
